[edit] refactored code

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 Dataset/
 Customized_Dataset/
 whisper-small-dv/
+Preprocessing/SR_Dys/
+Preprocessing/SR_Nor/
 
 # User-specific stuff
 .idea/**/workspace.xml
